drop trpc, use proxies for apis

--- a/packages/tipc/tsconfig.json
+++ b/packages/tipc/tsconfig.json
@@ -1,10 +1,10 @@
 {
 	"extends": "../../tsconfig.base.json",
 	"compilerOptions": {
-		"lib": ["esnext", "dom"],
+		"lib": ["es2023", "dom"],
 		"module": "esnext",
-		"moduleResolution": "bundler"
+		"moduleResolution": "bundler",
+		"target": "es2023"
 	},
-	"exclude": ["**/node_modules"],
 	"include": ["src", "./*.ts", "./*.js", "./*.cjs"]
 }
