--- a/packages/electron-typed-ipc/tsconfig.json
+++ b/packages/electron-typed-ipc/tsconfig.json
@@ -6,5 +6,6 @@
 		"moduleResolution": "bundler",
 		"target": "es2023"
 	},
-	"include": ["src", "./*.ts", "./*.js", "./*.cjs"]
+	"exclude": ["**/node_modules"],
+	"include": ["src", "__test__", "./*.ts", "./*.js", "./*.cjs"]
 }
