--- a/packages/electron-typed-ipc/package.json
+++ b/packages/electron-typed-ipc/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "electron-typed-ipc",
+	"name": "@kavsingh/electron-typed-ipc",
 	"version": "1.0.0-dev.0",
 	"description": "typed electron ipc",
 	"keywords": [],
