--- a/packages/electron-typed-ipc/package.json
+++ b/packages/electron-typed-ipc/package.json
@@ -23,6 +23,10 @@
 				"default": "./dist/common.cjs"
 			}
 		},
+		"./preload": {
+			"types": "./dist/preload.d.cts",
+			"default": "./dist/preload.cjs"
+		},
 		"./main": {
 			"import": {
 				"types": "./dist/main.d.ts",
@@ -31,16 +35,6 @@
 			"require": {
 				"types": "./dist/main.d.cts",
 				"default": "./dist/main.cjs"
-			}
-		},
-		"./preload": {
-			"import": {
-				"types": "./dist/preload.d.ts",
-				"default": "./dist/preload.js"
-			},
-			"require": {
-				"types": "./dist/preload.d.cts",
-				"default": "./dist/preload.cjs"
 			}
 		},
 		"./renderer": {
@@ -71,16 +65,17 @@
 		"build": "tsdown"
 	},
 	"devDependencies": {
+		"@tsconfig/node22": "22.0.2",
+		"@types/node": "22.18.12",
 		"@vitest/coverage-v8": "3.2.4",
+		"@vitest/eslint-plugin": "1.3.23",
 		"electron": "38.3.0",
-		"eslint-plugin-vitest": "0.5.4",
 		"superjson": "2.2.2",
 		"tsdown": "0.15.9",
 		"vitest": "3.2.4",
 		"zod": "4.1.12"
 	},
 	"peerDependencies": {
-		"electron": ">=38",
-		"superjson": ">=2"
+		"electron": ">=38"
 	}
 }
