--- a/packages/electron-typed-ipc/tsconfig.json
+++ b/packages/electron-typed-ipc/tsconfig.json
@@ -1,11 +1,5 @@
 {
-	"extends": "../../tsconfig.base.json",
-	"compilerOptions": {
-		"lib": ["es2023", "dom"],
-		"module": "esnext",
-		"moduleResolution": "bundler",
-		"target": "es2023"
-	},
-	"exclude": ["**/node_modules"],
-	"include": ["src", "__test__", "./*.ts", "./*.js", "./*.cjs"]
+	"$schema": "https://json.schemastore.org/tsconfig",
+	"extends": ["../../tsconfig.base.json", "@tsconfig/node24/tsconfig.json"],
+	"include": ["./*.ts", "./*.js"]
 }
