--- a/turbo.json
+++ b/turbo.json
@@ -16,6 +16,10 @@
 		"start": {
 			"outputs": ["dist/**"],
 			"dependsOn": ["^build"]
+		},
+		"build": {
+			"outputs": ["dist/**"],
+			"dependsOn": ["^build"]
 		}
 	}
 }
