build(deps): bump deps

--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -8,22 +8,23 @@
 	},
 	"main": "./dist/main.js",
 	"scripts": {
-		"build": "tsup --publicDir",
+		"build": "tsdown",
 		"start": "cross-env pnpm run build && electron ./dist/main.js",
 		"test": "echo 'soon'",
 		"test:e2e": "cross-env pnpm run build && playwright test",
+		"typecheck": "tsc",
 		"lint": "eslint ."
 	},
 	"keywords": [],
 	"author": "<author>",
 	"license": "MIT",
 	"dependencies": {
-		"electron": "35.2.0"
+		"electron": "36.4.0"
 	},
 	"devDependencies": {
-		"@playwright/test": "1.52.0",
-		"@tsconfig/node20": "20.1.5",
+		"@playwright/test": "1.53.0",
+		"@tsconfig/node22": "22.0.2",
 		"eslint-plugin-playwright": "2.2.0",
-		"tsup": "8.4.0"
+		"tsdown": "0.12.8"
 	}
 }
