--- a/package.json
+++ b/package.json
@@ -11,41 +11,43 @@
 	"license": "MIT",
 	"private": true,
 	"type": "module",
-	"packageManager": "pnpm@10.8.1+sha512.c50088ba998c67b8ca8c99df8a5e02fd2ae2e2b29aaf238feaa9e124248d3f48f9fb6db2424949ff901cffbb5e0f0cc1ad6aedb602cd29450751d11c35023677",
+	"packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac",
 	"engines": {
-		"node": ">=23"
+		"node": ">=24"
 	},
 	"scripts": {
 		"test": "turbo test",
 		"test:e2e": "turbo test:e2e",
+		"typecheck": "turbo typecheck",
 		"lint": "turbo lint",
 		"start": "turbo start"
 	},
 	"devDependencies": {
-		"@eslint/js": "9.25.0",
+		"@eslint/js": "9.29.0",
 		"@kavsingh/eslint-plugin-filenames": "2.0.0-rc.1",
-		"@tsconfig/node23": "23.0.1",
+		"@tsconfig/node24": "24.0.1",
 		"@tsconfig/strictest": "2.0.5",
 		"@types/eslint": "9.6.1",
-		"@types/node": "22.14.1",
+		"@types/node": "24.0.3",
 		"cross-env": "7.0.3",
-		"eslint": "9.25.0",
-		"eslint-config-prettier": "10.1.2",
-		"eslint-import-resolver-typescript": "4.3.3",
-		"eslint-plugin-import-x": "4.10.6",
-		"eslint-plugin-prettier": "5.2.6",
-		"globals": "16.0.0",
+		"eslint": "9.29.0",
+		"eslint-config-prettier": "10.1.5",
+		"eslint-import-resolver-typescript": "4.4.3",
+		"eslint-plugin-import-x": "4.15.2",
+		"eslint-plugin-prettier": "5.4.1",
+		"globals": "16.2.0",
 		"prettier": "3.5.3",
 		"rimraf": "6.0.1",
-		"turbo": "2.5.0",
+		"turbo": "2.5.4",
 		"typescript": "5.8.3",
-		"typescript-eslint": "8.30.1"
+		"typescript-eslint": "8.34.1"
 	},
 	"pnpm": {
 		"onlyBuiltDependencies": [
 			"electron",
 			"electron-winstaller",
-			"esbuild"
+			"esbuild",
+			"unrs-resolver"
 		]
 	}
 }
