--- a/packages/electron-typed-ipc/package.json
+++ b/packages/electron-typed-ipc/package.json
@@ -71,10 +71,8 @@
 		"@vitest/coverage-v8": "3.2.4",
 		"@vitest/eslint-plugin": "1.3.23",
 		"electron": "38.3.0",
-		"superjson": "2.2.2",
 		"tsdown": "0.15.9",
-		"vitest": "3.2.4",
-		"zod": "4.1.12"
+		"vitest": "3.2.4"
 	},
 	"peerDependencies": {
 		"electron": ">=38"
