--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,9 @@
 packages:
   - "apps/*"
   - "packages/*"
+
+onlyBuiltDependencies:
+  - "electron"
+  - "electron-winstaller"
+  - "esbuild"
+  - "unrs-resolver"
