build(repo): migrate to nx - update deps

--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,11 @@
 **/*.log*
 **/*.tsbuildinfo
 
-.turbo/
+.nx/cache
+.nx/workspace-data
+.github/instructions/nx.instructions.md
 
 .vscode/**/*
 !.vscode/extensions.json
 !.vscode/settings.json
+
