--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -11,7 +11,8 @@
 		"test": "echo 'soon'",
 		"test:e2e": "cross-env pnpm run build && playwright test",
 		"typecheck": "tsc",
-		"lint": "eslint ."
+		"lint": "eslint .",
+		"typeinst": "pnpm tsc --extendedDiagnostics | grep Instantiations:"
 	},
 	"keywords": [],
 	"author": "<author>",
@@ -20,6 +21,7 @@
 		"electron": "38.3.0"
 	},
 	"devDependencies": {
+		"@kavsingh/electron-typed-ipc": "workspace:*",
 		"@playwright/test": "1.56.1",
 		"@tsconfig/node22": "22.0.2",
 		"@types/node": "22.18.12",
