--- a/packages/electron-typed-ipc/package.json
+++ b/packages/electron-typed-ipc/package.json
@@ -15,8 +15,8 @@
 	"exports": {
 		".": {
 			"import": {
-				"types": "./dist/common.d.ts",
-				"default": "./dist/common.js"
+				"types": "./dist/common.d.mts",
+				"default": "./dist/common.mjs"
 			},
 			"require": {
 				"types": "./dist/common.d.cts",
@@ -29,8 +29,8 @@
 		},
 		"./main": {
 			"import": {
-				"types": "./dist/main.d.ts",
-				"default": "./dist/main.js"
+				"types": "./dist/main.d.mts",
+				"default": "./dist/main.mjs"
 			},
 			"require": {
 				"types": "./dist/main.d.cts",
@@ -39,8 +39,8 @@
 		},
 		"./renderer": {
 			"import": {
-				"types": "./dist/renderer.d.ts",
-				"default": "./dist/renderer.js"
+				"types": "./dist/renderer.d.mts",
+				"default": "./dist/renderer.mjs"
 			},
 			"require": {
 				"types": "./dist/renderer.d.cts",
@@ -49,8 +49,8 @@
 		},
 		"./test/renderer": {
 			"import": {
-				"types": "./dist/test-renderer.d.ts",
-				"default": "./dist/test-renderer.js"
+				"types": "./dist/test-renderer.d.mts",
+				"default": "./dist/test-renderer.mjs"
 			},
 			"require": {
 				"types": "./dist/test-renderer.d.cts",
@@ -66,13 +66,13 @@
 		"typeinst": "pnpm tsc --extendedDiagnostics | grep Instantiations:"
 	},
 	"devDependencies": {
-		"@tsconfig/node22": "22.0.2",
-		"@types/node": "22.18.12",
-		"@vitest/coverage-v8": "3.2.4",
-		"@vitest/eslint-plugin": "1.3.23",
-		"electron": "38.3.0",
-		"tsdown": "0.15.9",
-		"vitest": "3.2.4"
+		"@tsconfig/node22": "22.0.5",
+		"@types/node": "22.19.1",
+		"@vitest/coverage-v8": "4.0.14",
+		"@vitest/eslint-plugin": "1.5.0",
+		"electron": "39.2.3",
+		"tsdown": "0.16.7",
+		"vitest": "4.0.14"
 	},
 	"peerDependencies": {
 		"electron": ">=38"
