--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,8 @@
 
 	"editor.formatOnSave": true,
 	"editor.codeActionsOnSave": {
-		"source.fixAll": "always"
+		"source.fixAll.oxc": "always",
+		"source.fixAll.eslint": "always"
 	},
 	"editor.quickSuggestions": {
 		"strings": true
@@ -20,19 +21,24 @@
 
 	"typescript.tsdk": "node_modules/typescript/lib",
 
+	"oxc.enable": true,
+	"oxc.typeAware": true,
+
+	"eslint.enable": true,
 	"eslint.workingDirectories": [{ "mode": "auto" }],
 
+	"prettier.enable": true,
 	"[javascript]": {
-		"editor.defaultFormatter": "dbaeumer.vscode-eslint"
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
 	},
 	"[javascriptreact]": {
-		"editor.defaultFormatter": "dbaeumer.vscode-eslint"
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
 	},
 	"[typescript]": {
-		"editor.defaultFormatter": "dbaeumer.vscode-eslint"
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
 	},
 	"[typescriptreact]": {
-		"editor.defaultFormatter": "dbaeumer.vscode-eslint"
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
 	},
 	"[html]": {
 		"editor.defaultFormatter": "esbenp.prettier-vscode"
