--- a/package.json
+++ b/package.json
@@ -18,27 +18,24 @@
 	"scripts": {
 		"test": "nx run-many -t test",
 		"test:e2e": "nx test:e2e example",
-		"typecheck": "nx run-many -t typecheck",
-		"lint": "nx run-many -t lint",
+		"typecheck": "nx run-many -t typecheck --verbose",
+		"lint": "nx run-many -t lint --verbose",
 		"start": "nx start example",
 		"clean:nx": "rm -rf .nx && pnpm -r exec rm -rf .nx",
 		"clean:modules": "rm -rf node_modules && pnpm -r exec rm -rf node_modules"
 	},
 	"devDependencies": {
-		"@eslint/js": "9.39.2",
-		"@kavsingh/eslint-plugin-filenames": "2.0.0-rc.3",
 		"@tsconfig/node24": "24.0.3",
 		"@tsconfig/strictest": "2.0.8",
 		"@types/eslint": "9.6.1",
 		"@types/node": "24.10.4",
 		"cross-env": "10.1.0",
 		"eslint": "9.39.2",
-		"eslint-config-prettier": "10.1.8",
 		"eslint-import-resolver-typescript": "4.4.4",
 		"eslint-plugin-import-x": "4.16.1",
-		"eslint-plugin-prettier": "5.5.4",
-		"globals": "16.5.0",
 		"nx": "22.3.3",
+		"oxlint": "1.35.0",
+		"oxlint-tsgolint": "0.10.0",
 		"prettier": "3.7.4",
 		"rimraf": "6.1.2",
 		"typescript": "5.9.3",
