--- a/.oxfmtrc.json
+++ b/.oxfmtrc.json
@@ -2,5 +2,16 @@
 	"$schema": "./node_modules/oxfmt/configuration_schema.json",
 	"ignorePatterns": ["pnpm-*.yaml", "**/.nx/**", "**/dist/**", "**/reports/**"],
 	"printWidth": 80,
-	"useTabs": true
+	"useTabs": true,
+	"experimentalSortImports": {
+		"order": "asc",
+		"groups": [
+			["builtin"],
+			["external"],
+			["internal"],
+			["parent"],
+			["sibling", "index"],
+			["type"],
+		]
+	}
 }
