--- a/package.json
+++ b/package.json
@@ -23,17 +23,14 @@
 	"devDependencies": {
 		"@tsconfig/node24": "24.0.3",
 		"@tsconfig/strictest": "2.0.8",
-		"@types/eslint": "9.6.1",
 		"@types/node": "24.10.4",
 		"cross-env": "10.1.0",
-		"eslint": "9.39.2",
 		"nx": "22.3.3",
 		"oxfmt": "0.20.0",
 		"oxlint": "1.35.0",
 		"oxlint-tsgolint": "0.10.0",
 		"rimraf": "6.1.2",
-		"typescript": "5.9.3",
-		"typescript-eslint": "8.50.1"
+		"typescript": "5.9.3"
 	},
 	"engines": {
 		"node": ">=24"
