--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@tsconfig/strictest": "2.0.8",
 		"@types/node": "24.10.4",
 		"cross-env": "10.1.0",
+		"lefthook": "2.0.12",
 		"nx": "22.3.3",
 		"oxfmt": "0.20.0",
 		"oxlint": "1.35.0",
