feat(format): oxfmt (#3)
* replace prettier with oxfmt
* sort imports via oxfmt
* cleanup eslint configs
* install commit hooks

--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
 	"name": "electron-libs",
 	"version": "0.0.0",
+	"private": true,
 	"description": "monorepo for electron libs",
+	"keywords": [],
+	"license": "MIT",
 	"author": "<author>",
 	"repository": {
 		"type": "git",
 		"url": "git@github.com:kavsingh/electron-libs"
 	},
-	"keywords": [],
-	"license": "MIT",
-	"private": true,
 	"type": "module",
-	"packageManager": "pnpm@10.26.1+sha512.664074abc367d2c9324fdc18037097ce0a8f126034160f709928e9e9f95d98714347044e5c3164d65bd5da6c59c6be362b107546292a8eecb7999196e5ce58fa",
-	"engines": {
-		"node": ">=24"
-	},
 	"scripts": {
 		"test": "nx run-many -t test",
 		"test:e2e": "nx test:e2e example",
@@ -27,18 +23,18 @@
 	"devDependencies": {
 		"@tsconfig/node24": "24.0.3",
 		"@tsconfig/strictest": "2.0.8",
-		"@types/eslint": "9.6.1",
 		"@types/node": "24.10.4",
 		"cross-env": "10.1.0",
-		"eslint": "9.39.2",
-		"eslint-import-resolver-typescript": "4.4.4",
-		"eslint-plugin-import-x": "4.16.1",
+		"lefthook": "2.0.12",
 		"nx": "22.3.3",
+		"oxfmt": "0.20.0",
 		"oxlint": "1.35.0",
 		"oxlint-tsgolint": "0.10.0",
-		"prettier": "3.7.4",
 		"rimraf": "6.1.2",
-		"typescript": "5.9.3",
-		"typescript-eslint": "8.50.1"
-	}
+		"typescript": "5.9.3"
+	},
+	"engines": {
+		"node": ">=24"
+	},
+	"packageManager": "pnpm@10.26.1+sha512.664074abc367d2c9324fdc18037097ce0a8f126034160f709928e9e9f95d98714347044e5c3164d65bd5da6c59c6be362b107546292a8eecb7999196e5ce58fa"
 }
