--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -1,8 +1,10 @@
 {
 	"name": "example",
-	"productName": "Example",
 	"version": "1.0.0-dev.0",
 	"description": "libs usage examples and tests",
+	"keywords": [],
+	"license": "MIT",
+	"author": "<author>",
 	"type": "module",
 	"main": "./dist/main.js",
 	"scripts": {
@@ -11,12 +13,9 @@
 		"test": "echo 'soon'",
 		"test:e2e": "cross-env pnpm run build && playwright test",
 		"typecheck": "tsc",
-		"lint": "oxlint && eslint . && prettier . --check",
+		"lint": "oxlint && eslint . && oxfmt . --check",
 		"typeinst": "pnpm tsc --extendedDiagnostics | grep Instantiations:"
 	},
-	"keywords": [],
-	"author": "<author>",
-	"license": "MIT",
 	"dependencies": {
 		"electron": "39.2.7"
 	},
@@ -24,8 +23,12 @@
 		"@kavsingh/electron-typed-ipc": "workspace:*",
 		"@playwright/test": "1.57.0",
 		"@tsconfig/node22": "22.0.5",
+		"@types/eslint": "9.6.1",
 		"@types/node": "22.19.3",
+		"eslint": "9.39.2",
 		"eslint-plugin-playwright": "2.4.0",
-		"tsdown": "0.18.2"
-	}
+		"tsdown": "0.18.2",
+		"typescript-eslint": "8.50.1"
+	},
+	"productName": "Example"
 }
