--- a/apps/example/lefthook.yml
+++ b/apps/example/lefthook.yml
@@ -1,7 +1,12 @@
 pre-commit:
   parallel: true
   jobs:
-    - run: pnpm oxlint {staged_files}
-      glob: "*.{js,ts,jsx,tsx}"
+    - run: pnpm tsc
+      root: "apps/example"
+      glob: "**/*.{js,ts,jsx,tsx}"
+    - run: pnpm oxlint --type-aware {staged_files}
+      root: "apps/example"
+      glob: "**/*.{js,ts,jsx,tsx}"
     - run: pnpm eslint {staged_files}
-      glob: "*.{js,ts,jsx,tsx}"
+      root: "apps/example"
+      glob: "**/*.{js,ts,jsx,tsx}"
