--- a/packages/electron-typed-ipc/lefthook.yml
+++ b/packages/electron-typed-ipc/lefthook.yml
@@ -1,4 +1,9 @@
 pre-commit:
+  parallel: true
   jobs:
-    - run: pnpm oxlint {staged_files}
-      glob: "*.{js,ts,jsx,tsx}"
+    - run: pnpm tsc
+      root: "packages/electron-typed-ipc"
+      glob: "**/*.{js,ts,jsx,tsx}"
+    - run: pnpm oxlint --type-aware {staged_files}
+      root: "packages/electron-typed-ipc"
+      glob: "**/*.{js,ts,jsx,tsx}"
