--- a/packages/electron-typed-ipc/tsconfig.json
+++ b/packages/electron-typed-ipc/tsconfig.json
@@ -1,5 +1,6 @@
 {
 	"$schema": "https://json.schemastore.org/tsconfig",
 	"extends": ["../../tsconfig.base.json", "@tsconfig/node24/tsconfig.json"],
-	"include": ["./*.ts", "./*.js"]
+	"compilerOptions": { "lib": ["ESNext", "DOM"] },
+	"include": ["src", "./*.ts", "./*.js"]
 }
