fix(lint): enable vitest plugin

--- a/packages/electron-typed-ipc/.oxlintrc.json
+++ b/packages/electron-typed-ipc/.oxlintrc.json
@@ -18,6 +18,7 @@
 		{
 			"files": ["src/**/*.test.ts", "src/**/*.test-d.ts"],
 			"env": { "browser": true, "node": true },
+			"plugins": ["vitest"],
 			"rules": {
 				"eslint/max-lines-per-function": "off",
 				"eslint/no-console": "off",
