--- a/packages/electron-typed-ipc/package.json
+++ b/packages/electron-typed-ipc/package.json
@@ -59,7 +59,7 @@
 		"tdd": "vitest --typecheck --reporter=verbose",
 		"test": "vitest run --typecheck --coverage",
 		"typecheck": "tsc",
-		"lint": "oxlint && oxfmt . --check",
+		"lint": "oxlint --type-aware && oxfmt . --check",
 		"build": "tsdown",
 		"typeinst": "pnpm tsc --extendedDiagnostics | grep Instantiations:"
 	},
