--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -10,25 +10,23 @@
 	"scripts": {
 		"build": "tsdown",
 		"start": "cross-env pnpm run build && electron ./dist/main.mjs",
-		"test": "echo 'soon'",
+		"test": "echo 'only e2e'",
 		"test:e2e": "cross-env pnpm run build && playwright test",
 		"typecheck": "tsc",
 		"lint": "oxlint --type-aware && eslint . && oxfmt . --check",
 		"typeinst": "pnpm tsc --extendedDiagnostics | grep Instantiations:"
 	},
 	"dependencies": {
-		"electron": "39.2.7"
+		"electron": "40.0.0"
 	},
 	"devDependencies": {
 		"@kavsingh/electron-typed-ipc": "workspace:*",
 		"@playwright/test": "1.57.0",
-		"@tsconfig/node22": "22.0.5",
 		"@types/eslint": "9.6.1",
-		"@types/node": "22.19.3",
 		"eslint": "9.39.2",
-		"eslint-plugin-playwright": "2.4.0",
-		"tsdown": "0.18.2",
-		"typescript-eslint": "8.50.1"
+		"eslint-plugin-playwright": "2.5.0",
+		"tsdown": "0.19.0",
+		"typescript-eslint": "8.53.0"
 	},
 	"productName": "Example"
 }
