--- a/apps/example/tsconfig.json
+++ b/apps/example/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"$schema": "https://json.schemastore.org/tsconfig",
-	"extends": ["../../tsconfig.base.json", "@tsconfig/node22/tsconfig.json"],
-	"compilerOptions": { "lib": ["es2023", "dom"] },
-	"exclude": ["node_modules", "dist"]
+	"include": ["e2e", "./*.ts", "./*.js"],
+	"extends": ["../../tsconfig.base.json", "@tsconfig/node24/tsconfig.json"],
+	"compilerOptions": { "lib": ["es2023", "dom"] }
 }
