--- a/package.json
+++ b/package.json
@@ -12,29 +12,29 @@
 	},
 	"type": "module",
 	"scripts": {
-		"test": "nx run-many -t test",
+		"test": "nx run-many -t test --outputStyle stream",
 		"test:e2e": "nx test:e2e example",
-		"typecheck": "nx run-many -t typecheck --verbose",
-		"lint": "nx run-many -t lint --verbose",
+		"typecheck": "nx run-many -t typecheck --outputStyle stream",
+		"lint": "nx run-many -t lint --outputStyle stream",
 		"start": "nx start example",
-		"clean:nx": "rm -rf .nx && pnpm -r exec rm -rf .nx",
-		"clean:modules": "rm -rf node_modules && pnpm -r exec rm -rf node_modules"
+		"clean:nx": "pnpm -r exec rimraf .nx && rimraf .nx",
+		"clean:modules": "cross-env pnpm -r exec rimraf node_modules && rimraf node_modules"
 	},
 	"devDependencies": {
-		"@tsconfig/node24": "24.0.3",
+		"@tsconfig/node24": "24.0.4",
 		"@tsconfig/strictest": "2.0.8",
-		"@types/node": "24.10.4",
+		"@types/node": "24.10.9",
 		"cross-env": "10.1.0",
-		"lefthook": "2.0.12",
+		"lefthook": "2.0.15",
 		"nx": "22.3.3",
-		"oxfmt": "0.20.0",
-		"oxlint": "1.35.0",
-		"oxlint-tsgolint": "0.10.0",
+		"oxfmt": "0.24.0",
+		"oxlint": "1.39.0",
+		"oxlint-tsgolint": "0.11.1",
 		"rimraf": "6.1.2",
 		"typescript": "5.9.3"
 	},
 	"engines": {
 		"node": ">=24"
 	},
-	"packageManager": "pnpm@10.26.1+sha512.664074abc367d2c9324fdc18037097ce0a8f126034160f709928e9e9f95d98714347044e5c3164d65bd5da6c59c6be362b107546292a8eecb7999196e5ce58fa"
+	"packageManager": "pnpm@10.28.0+sha512.05df71d1421f21399e053fde567cea34d446fa02c76571441bfc1c7956e98e363088982d940465fd34480d4d90a0668bc12362f8aa88000a64e83d0b0e47be48"
 }
