--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-.DS_Store
+**/.DS_Store
 **/node_modules
 **/dist
 **/reports
@@ -15,3 +15,5 @@
 !.vscode/extensions.json
 !.vscode/settings.json
 
+.zed/**/*
+!.zed/settings.json
