refactor(electron-typed-ipc): used ts project refs

--- a/apps/example/tsconfig.json
+++ b/apps/example/tsconfig.json
@@ -2,5 +2,5 @@
 	"$schema": "https://json.schemastore.org/tsconfig",
 	"include": ["e2e", "./*.ts", "./*.js"],
 	"extends": ["../../tsconfig.base.json", "@tsconfig/node24/tsconfig.json"],
-	"compilerOptions": { "lib": ["es2023", "dom"] }
+	"compilerOptions": { "lib": ["es2023", "dom"], "noEmit": true }
 }
