--- a/packages/electron-typed-ipc/tsconfig.json
+++ b/packages/electron-typed-ipc/tsconfig.json
@@ -1,9 +1,8 @@
 {
 	"$schema": "https://json.schemastore.org/tsconfig",
-	"include": ["src", "./*.ts", "./*.js"],
-	"extends": ["../../tsconfig.base.json", "@tsconfig/node22/tsconfig.json"],
-	"compilerOptions": {
-		"lib": ["esnext", "dom", "dom.iterable", "dom.asynciterable"],
-		"types": ["@types/node22"]
-	}
+	"include": [],
+	"references": [
+		{ "path": "./tsconfig.node.json" },
+		{ "path": "./tsconfig.src.json" }
+	]
 }
