--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -14,7 +14,7 @@
 		"test:e2e": "cross-env pnpm run build && playwright test",
 		"typecheck": "tsc",
 		"lint": "oxlint --type-aware && eslint . && oxfmt . --check",
-		"typeinst": "pnpm tsc --extendedDiagnostics | grep Instantiations:"
+		"typeinst": "tsc --extendedDiagnostics | grep Instantiations:"
 	},
 	"dependencies": {
 		"electron": "40.0.0"
