--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -12,7 +12,7 @@
 		"start": "cross-env pnpm run build && electron ./dist/main.mjs",
 		"test": "echo 'only e2e'",
 		"test:e2e": "cross-env pnpm run build && playwright test",
-		"typecheck": "tsc --build --noEmit",
+		"typecheck": "tsgo --build --noEmit",
 		"lint": "oxlint --type-aware && eslint . && oxfmt . --check"
 	},
 	"dependencies": {
@@ -25,7 +25,7 @@
 		"eslint": "9.39.2",
 		"eslint-plugin-playwright": "2.5.0",
 		"tsdown": "0.19.0",
-		"typescript-eslint": "8.53.0"
+		"typescript-eslint": "8.53.1"
 	},
 	"productName": "Example"
 }
