--- a/packages/electron-typed-ipc/package.json
+++ b/packages/electron-typed-ipc/package.json
@@ -58,7 +58,7 @@
 	"scripts": {
 		"tdd": "vitest --typecheck --reporter=verbose",
 		"test": "vitest run --typecheck --coverage",
-		"typecheck": "tsc --build --noEmit",
+		"typecheck": "tsgo --build --noEmit",
 		"lint": "oxlint --type-aware && oxfmt . --check",
 		"build": "tsdown",
 		"typeinst": "pnpm tsc --extendedDiagnostics | grep Instantiations:"
