--- a/packages/electron-typed-ipc/lefthook.yml
+++ b/packages/electron-typed-ipc/lefthook.yml
@@ -1,9 +1,6 @@
 pre-commit:
   parallel: true
   jobs:
-    - run: pnpm tsgo --build --noEmit
-      root: "packages/electron-typed-ipc"
-      glob: "**/*.{js,ts,jsx,tsx}"
-    - run: pnpm oxlint --type-aware {staged_files}
+    - run: pnpm oxlint --type-aware --type-check {staged_files}
       root: "packages/electron-typed-ipc"
       glob: "**/*.{js,ts,jsx,tsx}"
