--- a/packages/electron-typed-ipc/tsconfig.node.json
+++ b/packages/electron-typed-ipc/tsconfig.node.json
@@ -1,6 +1,6 @@
 {
 	"$schema": "https://json.schemastore.org/tsconfig",
-	"include": ["./*.ts", "./*.js"],
+	"include": ["./*.ts", "./*.js", "../../*.config.ts"],
 	"extends": ["../../tsconfig.base.json", "@tsconfig/node24/tsconfig.json"],
 	"compilerOptions": {
 		"composite": true,
