--- a/apps/example/tsconfig.bun.json
+++ b/apps/example/tsconfig.bun.json
@@ -1,10 +1,10 @@
 {
 	"$schema": "https://json.schemastore.org/tsconfig",
 	"include": ["e2e", "./*.ts", "./*.js", "../../*.config.ts"],
-	"extends": ["../../tsconfig.base.json", "@tsconfig/node24/tsconfig.json"],
+	"extends": ["../../tsconfig.base.json", "@tsconfig/bun/tsconfig.json"],
 	"compilerOptions": {
 		"composite": true,
 		"emitDeclarationOnly": true,
-		"types": ["node24"]
+		"types": []
 	}
 }
