--- a/apps/example/lefthook.yml
+++ b/apps/example/lefthook.yml
@@ -1,9 +1,9 @@
 pre-commit:
   parallel: true
   jobs:
-    - run: pnpm oxlint --type-aware --type-check {staged_files}
+    - run: bun oxlint --type-aware --type-check {staged_files}
       root: "apps/example"
       glob: "**/*.{js,ts,jsx,tsx}"
-    - run: pnpm eslint --max-warnings=0 --no-warn-ignored {staged_files}
+    - run: bun eslint --max-warnings=0 --no-warn-ignored {staged_files}
       root: "apps/example"
       glob: "**/*.{js,ts,jsx,tsx}"
