--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -9,9 +9,9 @@
 	"main": "./dist/main.js",
 	"scripts": {
 		"build": "tsdown",
-		"start": "cross-env pnpm run build && electron ./dist/main.mjs",
+		"start": "cross-env bun run build && electron ./dist/main.mjs",
 		"test": "echo 'only e2e'",
-		"test:e2e": "cross-env pnpm run build && playwright test",
+		"test:e2e": "cross-env bun run build && playwright test",
 		"lint": "oxlint --type-aware --type-check && eslint . --max-warnings=0 --no-warn-ignored && oxfmt . --check"
 	},
 	"dependencies": {
@@ -20,7 +20,9 @@
 	"devDependencies": {
 		"@kavsingh/electron-typed-ipc": "workspace:*",
 		"@playwright/test": "1.58.2",
+		"@tsconfig/node24": "24.0.4",
 		"@types/eslint": "9.6.1",
+		"@types/node24": "npm:@types/node@24.10.13",
 		"eslint": "10.0.0",
 		"eslint-plugin-playwright": "2.5.1",
 		"tsdown": "catalog:",
