--- a/lefthook.yml
+++ b/lefthook.yml
@@ -4,12 +4,12 @@ extends:
 
 pre-commit:
   jobs:
-    - run: pnpm oxfmt {staged_files}
+    - run: bun oxfmt {staged_files}
       glob: "**/*.{js,ts,jsx,tsx,json,jsonc,yaml,yml,html,css}"
       stage_fixed: true
 
 pre-push:
   parallel: true
   jobs:
-    - run: pnpm lint
+    - run: bun lint
       glob: "**/*.*"
