--- a/package.json
+++ b/package.json
@@ -10,6 +10,16 @@
 		"type": "git",
 		"url": "git@github.com:kavsingh/electron-libs"
 	},
+	"workspaces": {
+		"packages": [
+			"apps/*",
+			"packages/*"
+		],
+		"catalog": {
+			"electron": "40.4.0",
+			"tsdown": "0.20.3"
+		}
+	},
 	"type": "module",
 	"scripts": {
 		"test": "nx run-many -t test --outputStyle stream",
@@ -20,9 +30,8 @@
 		"clean:modules": "rimraf ./**/node_modules --glob"
 	},
 	"devDependencies": {
-		"@tsconfig/node24": "24.0.4",
+		"@tsconfig/bun": "1.0.10",
 		"@tsconfig/strictest": "2.0.8",
-		"@types/node24": "npm:@types/node@24.10.13",
 		"@typescript/native-preview": "7.0.0-dev.20260212.1",
 		"cross-env": "10.1.0",
 		"lefthook": "2.1.1",
@@ -33,8 +42,5 @@
 		"rimraf": "6.1.2",
 		"typescript": "5.9.3"
 	},
-	"engines": {
-		"node": ">=24"
-	},
-	"packageManager": "pnpm@10.29.3+sha512.498e1fb4cca5aa06c1dcf2611e6fafc50972ffe7189998c409e90de74566444298ffe43e6cd2acdc775ba1aa7cc5e092a8b7054c811ba8c5770f84693d33d2dc"
+	"packageManager": "bun@1.3.9"
 }
