--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,11 +1,12 @@
 packages:
   - apps/*
   - packages/*
-
 nodeLinker: hoisted
-
 allowBuilds:
   electron: true
   esbuild: true
   lefthook: true
   nx: true
+catalog:
+  electron: 40.4.0
+  tsdown: 0.20.3
