--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,5 @@
 	"$schema": "https://json.schemastore.org/tsconfig",
 	"include": ["./*.ts", "./*.js", "./*.cjs"],
 	"extends": ["./tsconfig.base.json", "@tsconfig/node24/tsconfig.json"],
-	"compilerOptions": { "noEmit": true }
+	"compilerOptions": { "noEmit": true, "types": ["node24"] }
 }
