chore(repo): remove eslint settings

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,3 @@
 {
-	"recommendations": [
-		"typescriptteam.native-preview",
-		"oxc.oxc-vscode",
-		"dbaeumer.vscode-eslint",
-		"tamasfe.even-better-toml"
-	]
+	"recommendations": ["typescriptteam.native-preview", "oxc.oxc-vscode"]
 }
